# life-journal-masonite

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.docker/: devdb.sh  testdb.sh
app/: Entry.py
app/http/controllers/: ConfirmController.py  EntryController.py  LoginController.py  PasswordController.py  RegisterController.py
config/: factories.py
databases/migrations/: 2018_01_09_043202_create_users_table.py  2019_11_07_110837_create_entries_table.py
databases/seeds/: __init__.py  database_seeder.py  entries_table_seeder.py  user_table_seeder.py
resources/templates/: base.html  entries.html  entry.html  welcome.html
resources/templates/auth/: base.html
resources/templates/helpers/: messages.html
routes/: web.py
